--- a/Project01_Portfolio/style/styles.css
+++ b/Project01_Portfolio/style/styles.css
@@ -57,7 +57,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
+  background: url('/images/AZ_img.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -141,6 +141,14 @@ footer ul li {
   display: inline-block;
 }
 
+a.artstation {
+  background-image: url(/images/art_img.png);
+}
+
+a.git {
+    background-image: url(images/git_img.png);
+}
+
 a.social {
   display: inline-block;
   text-indent: -9999px;
@@ -151,15 +159,7 @@ a.social {
   opacity: .4;
   transition: all .5s;
 }
-a.twitter {
-  background-image: url(images/twitter.svg);
-}
-a.linkedin {
-  background-image: url(images/linkedin.svg);
-}
-a.github {
-  background-image: url(images/github.svg);
-}
+
 a.social:hover {
   opacity: 1;
 }
