--- a/Project01_Portfolio/style/styles.css
+++ b/Project01_Portfolio/style/styles.css
@@ -23,7 +23,7 @@ a:hover {
 
 /* Section Styles */
 
-.main-nav {
+.nav-bar {
   width: 100%;
   background: black;
   min-height: 30px;
@@ -31,7 +31,7 @@ a:hover {
   position: fixed;
   text-align: center;
 }
-.nav {
+.nav-list {
   display: flex;
   justify-content: space-around;
   font-weight: 700;
@@ -40,18 +40,18 @@ a:hover {
   padding: 0;
 }
 
-.nav .name {
+.nav-list .name {
     display: block;
     margin-right: auto;
     color: white;
 }
-.nav li {
+.nav-list li {
   padding: 5px 10px 10px 10px;
 }
-.nav a {
+.nav-list a {
   transition: all .5s;
 }
-.nav a:hover {
+.nav-list a:hover {
   color: white
 }
 
@@ -109,7 +109,7 @@ header .profile-image:hover {
   color: gold;
   margin-bottom: 20px;
 }
-.card {
+.flexcard {
   margin: 30px;
   padding: 20px 40px 40px;
   max-width: 500px;
@@ -120,7 +120,7 @@ header .profile-image:hover {
   border-radius: 6px;
   transition: all .5s;
 }
-.card:hover {
+.flexcard:hover {
   border-color: maroon;
 }
 .card-title {
@@ -144,12 +144,12 @@ header .profile-image:hover {
   transition: all .5s;
 }
 
-ul.skills {
+ul.skill-list {
   padding: 0;
   text-align: center;
 }
 
-.skills li {
+.skill-list li {
   border-radius: 6px;
   display: inline-block;
   background: gold;
@@ -158,11 +158,11 @@ ul.skills {
   margin: 2px;
 }
 
-.skills li:nth-child(odd) {
+.skill-list li:nth-child(odd) {
   background: maroon
   ;
 }
-.skills li:nth-child(even) {
+.skill-list li:nth-child(even) {
   color: black
   ;
 }
@@ -236,7 +236,7 @@ footer ul li {
     min-height: 150px;
   }
 
-  .nav {
+  .nav-list {
     max-width: 1200px;
     padding: 0 30px;
   }
